<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">
            <ImageView
                android:contentDescription="@string/empresa_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <ImageView
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/icon"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/empresa"
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" >
                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/empresa"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <ImageView
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/icon"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/telefone"
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/telefone"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <ImageView
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/icon"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/endereco"
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" >
                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/endereço"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <ImageView
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/icon"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/site"
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" >
                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/site"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <ImageView
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/icon"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/email"
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" >
                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <ImageView
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/icon"
                    android:id="@+id/calendar"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/hora"
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="0dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" >
                <TextView
                    android:id="@+id/dias"
                    android:text="@string/dias"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/horario"
                    android:layout_below="@id/dias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horário"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>